--- a/InventorySystem.vbproj
+++ b/InventorySystem.vbproj
@@ -191,6 +191,7 @@
     <Content Include="bootstrap-4.4.1-dist\js\bootstrap.min.js" />
     <Content Include="CSS\font-awesome.min.css" />
     <Content Include="Forms\AssignAdditional_Equip.aspx" />
+    <Content Include="Forms\equipment-repair.aspx" />
     <Content Include="jquery-ui\jquery-ui-1.12.1\AUTHORS.txt" />
     <Content Include="jquery-ui\jquery-ui-1.12.1\external\jquery\jquery.js" />
     <Content Include="jquery-ui\jquery-ui-1.12.1\images\ui-icons_444444_256x240.png" />
@@ -343,6 +344,13 @@
     </Compile>
     <Compile Include="Forms\AssignAdditional_Equip.aspx.vb">
       <DependentUpon>AssignAdditional_Equip.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="Forms\equipment-repair.aspx.designer.vb">
+      <DependentUpon>equipment-repair.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\equipment-repair.aspx.vb">
+      <DependentUpon>equipment-repair.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="Forms\History.aspx.designer.vb">
